@@ -474,7 +474,7 @@ setenv COB_PHYSICAL_CANCEL=true
 
 
 # check if default for physical cancel is still false
-AT_CHECK([$COBCRUN --runtime-conf |
+AT_CHECK([$COBCRUN --runtime-conf | \
 grep "COB_PHYSICAL_CANCEL" | grep "false" | grep "default"], [0], ignore, [])
 
 # check if override via -c works and if include works
@@ -546,6 +546,7 @@ sort_chunk 4K
 sort_memory 4G # too big by some byte
 setenv nothing
 sort_chunk
+trace_file /tmp:/temp
 ])
 
 # conf entries must be clean
@@ -564,6 +565,8 @@ defunc.cfg: 7: Invalid value '4G' for configuration tag 'sort_memory';
 	maximum value: 4294967294
 defunc.cfg: 8: WARNING - 'setenv nothing' without a value - ignored!
 defunc.cfg: 9: WARNING - 'sort_chunk' without a value - ignored!
+defunc.cfg: 10: Invalid value '/tmp:/temp' for configuration tag 'trace_file';
+	should not contain ':'
 ])
 
 AT_CLEANUP
@@ -607,5 +610,23 @@ includeif "notthere.cfg"
 ])
 
 AT_CHECK([$COBCRUN -c defunc.cfg --runtime-conf], [0], ignore, [])
+
+AT_CLEANUP
+
+AT_SETUP([COB_CONFIG_DIR test])
+AT_KEYWORDS([environment variable])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       PROCEDURE        DIVISION.
+           STOP RUN.
+])
+
+AT_CHECK([export COB_CONFIG_DIR=/temp:/tmp; \
+$COMPILE prog.cob], [99], [],
+[cobc: environment variable 'COB_CONFIG_DIR' is '/temp:/tmp'; should not contain ':'
+cobc: aborting
+])
 
 AT_CLEANUP
